--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     position: relative;
     width: 100%;
     height: 100vh; /* Full viewport height */
-    background: url('../images/banner.jpg') no-repeat center center/cover;
+    background: url('https://yourgithubusername.github.io/indumallampali/images/banner.jpg') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
