--- a/styles/style-new.css
+++ b/styles/style-new.css
@@ -41,7 +41,7 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url('https://Indukumarm.github.io/indumallampali.com/images/banner.jpg') no-repeat center center/cover;
+    background: url('https://github.com/Indukumarm/indumallampali.com/images/banner.jpg') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
