--- a/styles/style-new.css
+++ b/styles/style-new.css
@@ -41,14 +41,16 @@ body {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url('background: url('https://raw.githubusercontent.com/Indukumarm/indumallampali.com/main/images/banner.jpg') no-repeat center center/cover;') no-repeat center center/cover;
+    background: url('https://raw.githubusercontent.com/Indukumarm/indumallampali.com/main/images/banner.jpg') no-repeat center center/cover;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
 }
-
 /* Dark Overlay for Readability */
 .hero-banner::before {
     content: "";
